tests/cases/should_fail/misc/expresionless_directive.hash
// run=fail, stage=parse

// This directive does not have an expression
k := #dump;
